<resources>
    <string name="app_name">MiniaElec</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="petrotrade_co">شركة مصر الوسطى لتوزيع الكهرباء</string>
    <string name="today_report">تقرير اليوم</string>
    <string name="other_services">خدمات اخرى</string>
    <string name="pay_bills">دفع فواتير</string>
    <string name="read_counter">تسجيل قراءة العداد</string>
    <string name="soon">هذه الخدمة ستكون متاحة قريباَ</string>
    <string name="inquiry_title">استعلام برقم المشترك</string>
    <string name="subscriber_number">رقم المشترك</string>
    <string name="inquiry">استعلام</string>
    <string name="enter_subscriber_num">أدخل رقم المشترك</string>
    <string name="last_meter">القراءة السابقة</string>
    <string name="enter_current_meter">أدخل القراءة الحالية</string>
    <string name="enter_current_meter_note">برجاء كتابة القراءة كما هي على عداد الغاز والمحددة باللون الأسود!</string>
    <string name="send_current_meter">تسجيل القراءة</string>
    <string name="customer_name">اسم المشترك</string>
    <string name="address">العنوان</string>
    <string name="current_meter">القراءة الحالية</string>
    <string name="invoice_number">رقم الإيصال</string>
    <string name="month">شهر الإصدار</string>
    <string name="invoice_amount">قيمة الفاتورة</string>
    <string name="amount">المبلغ</string>
    <string name="cancel">إلغاء</string>
    <string name="ok">تأكيد</string>
    <string name="enter_amount">أدخل المبلغ</string>
    <string name="cash">دفع نقدي</string>
    <string name="card">دفع بالكارت</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="duration">الفترة</string>
    <string name="processing">جاري التنفيذ...</string>
    <string name="switching">برجاء الانتظار...</string>
    <string name="required_field">هذا الحقل مطلوب!</string>
    <string name="pay_building_bills">دفع فواتير مبني</string>
    <string name="logo">logo</string>
    <string name="powered_by">POWERED BY</string>
    <string name="inquiry_building_number">استعلام برقم المبنى</string>
    <string name="enter_building_num">أدخل رقم المبنى</string>
    <string name="total_amount">المبلغ الإجمالي</string>
    <string name="bills_count">عدد الفواتير</string>
    <string name="subscriber_name">اسم المشترك</string>
    <string name="done">حسناً</string>
    <string name="login">تسجيل الدخول</string>
    <string name="collector_code">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="enter_collector_code_and_password">لتسجيل الدخول أدخل كلمة المستخدم وكلمة المرور</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="app_version">إصدار</string>
    <string name="get_building_data">تحميل بيانات المبنى</string>
    <string name="enter_following_data">أدخل البيانات التالية لتحميل بيانات المشتركين</string>
    <string name="start">ابدأ الآن</string>
    <string name="select_place">اختر المنطقة</string>
    <string name="building">عمارة</string>
    <string name="block">بلوك</string>
    <string name="section">قطاع</string>
    <string name="daily">اليومية</string>
    <string name="place">المنطقة</string>
    <string name="building_data">بيانات المبنى</string>
    <string name="view_details">عرض التفاصيل</string>
    <string name="from_month">من شهر</string>
    <string name="to_month">إلى شهر</string>
    <string name="partial_collect">تحصيل جزئي</string>
    <string name="total_collect">تحصيل كلي</string>
    <string name="enter_reading">إدخال القراءة</string>
    <string name="unit_details">تفاصيل الوحدة</string>
    <string name="confirm_payment">تأكيد الدفع</string>
    <string name="confirm">تأكيد</string>
    <string name="choose_payment_method">اختر طريقة الدفع!</string>
    <string name="oops">عفواً</string>
    <string name="try_again">أعد المحاولة</string>
    <string name="no_bills">لا يوجد فواتير للتحصيل</string>
    <string name="counter_number">رقم العداد</string>
    <string name="payment_months">أشهر المحاسبة</string>
    <string name="partial_collect_amount">مبلغ التحصيل الجزئي</string>
    <string name="crn_collect">تحصيل CRN</string>
    <string name="building_details">تفاصيل المباني</string>
    <string name="collected">ماتم تحصيله</string>
    <string name="reprint">إعادة الطباعة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="enter_crn_number">"أدخل رقم المشترك (CRN) المكون من16 رقم "</string>
    <string name="fary_code">فرعي</string>
    <string name="apartment">شقة</string>
    <string name="area">منطقة</string>
    <string name="governorate">محافظة</string>
    <string name="inside_area">داخل المنطقة</string>
    <string name="total_customers">إجمالي العملاء</string>
    <string name="total_bills">إجمالي الفواتير</string>
    <string name="total_collected">إجمالي التحصيل</string>
    <string name="total_visa">إجمالي الفيزا</string>
    <string name="total_cash">إجمالي الكاش</string>
    <string name="outside_area">خارج المنطقة</string>
    <string name="total_all_collected">إجمالي جميع التحصيلات</string>
    <string name="total_all_bills">إجمالي جميع الفواتير</string>
    <string name="customers">عملاء</string>
    <string name="bills">فواتير</string>
    <string name="collects">تحصيلات</string>
    <string name="client_id">رقم الاشتراك</string>
    <string name="client_inquiry">استعلام عن مشترك</string>
    <string name="client_name">اسم العميل</string>
    <string name="pay">دفع</string>
    <string name="bill_date">تاريخ الفاتورة</string>
    <string name="bill_value">قيمة الفاتورة</string>
    <string name="wallet">دفع بالمحفظة</string>
    <string name="client_mobile_no">تليفون العميل</string>
    <string name="enter_client_mobile_no">أدخل رقم تليفون العميل</string>
    <string name="egp">ج.م</string>
    <string name="settle">تسوية</string>
    <string name="exit">الخروج من التطبيق</string>
    <string name="exit_password">ادخل كلمة سر الخروج من التطبيق</string>
    <string name="select_payment_method">اختر طريقة الدفع</string>
    <string name="selected_bills_value">قيم الفواتير</string>
    <string name="reports">عرض التقارير</string>
    <string name="get_client_data">تحميل بيانات المشتركين</string>
    <string name="client_id_search">بحث برقم الاشتراك</string>
    <string name="client_name_search">بحث باسم المشترك</string>
    <string name="main_code">الحساب</string>
    <string name="reference_search">بحث بالمرجع</string>
    <string name="select_day">اختر اليومية</string>
    <string name="enable_required_permossions">لضمان عمل التطبيق بشكل صحيح برجاء السماح للتطبيق بالوصول للأذونات المطلوبة</string>
    <string name="search">بحث</string>
    <string name="extract_data">استخراج البيانات المعلقة</string>
    <string name="enter_password">أدخل كلمة المرور</string>
    <string name="check_collect">مراجعة التحصيلات</string>
    <string name="day">اليوم</string>
    <string name="offline_cash">كاش اوف لاين</string>
    <string name="online_cash">كاش اون لاين</string>
    <string name="collected_detailed">تفاصيل التحصيلات</string>
    <string name="bank_transaction_id">كود العملية البنكية</string>
    <string name="payment_time">توقيت الدفع</string>
    <string name="current_month">الشهر الحالي</string>
    <string name="total_collected_amount">المبلغ المحصل</string>
    <string name="total_collected_count">عدد الفواتير المحصلة</string>
    <string name="remain_bills_count">عدد الفواتير المتبقية</string>
    <string name="remain_bills_amount">المبلغ المتبقي</string>
    <string name="From">من</string>
    <string name="to">الي</string>
    <string name="show_filtered_reports">عرض</string>
    <string name="err_get_bills">تعذر الحصول على فواتير</string>
    <string name="deduct">خصم</string>
    <string name="err_no_deducts">لا يوجد أنواع خصم</string>
    <string name="select_deduct_type">اختر نوع الخصم</string>

    <string-array name="places">
        <item>المنطقة الأولى</item>
        <item>المنطقة الثانية</item>
        <item>المنطقة الثالثة</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>
