<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home"
        android:id="@+id/mainFragment"/>
    <item
        android:id="@+id/onlineReportsFragment"
        android:title="@string/reports" />
    <item
        android:id="@+id/reprintFragment"
        android:title="@string/reprint" />
    <item
        android:id="@+id/nav_settle"
        android:title="@string/settle" />
    <item
        android:id="@+id/nav_check_collected"
        android:title="@string/check_collect" />
    <item
        android:id="@+id/totalsFetchedBillsFragment"
        android:title="@string/total_bills" />
    <item
        android:id="@+id/totalCollectedBillsFragment"
        android:title="@string/total_collected" />
    <item
        android:id="@+id/detailedCollectedBillsFragment"
        android:title="@string/collected_detailed" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit" />
    <item
        android:id="@+id/load_clients_data"
        android:title="@string/get_client_data" />
    <item
        android:id="@+id/extract_data"
        android:title="@string/extract_data" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/app_version"
        android:title="@string/app_version" />
</menu>
