<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:maxLines="1"
        android:textStyle="bold|italic"
        android:text="@string/day"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/offline_cash"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/offline_cash_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/amount"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/offline_cash_bills_count"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/bills_count"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/online_cash"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/online_cash_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/amount"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/online_cash_bills_count"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/bills_count"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/card"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/visa_amount"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/amount"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/visa_bills_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bills_count"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/wallet"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wallet_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/amount"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/wallet_bills_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bills_count"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>